# routes/auth.js
@@ -9,5 +9,6 @@ router.post('/register', AuthenticationController.registerUser);
 router.get('/verify/:token', AuthenticationController.verifyEmail);
 router.post('/forgot-password', AuthenticationController.sendOtp);
 router.post('/reset-password', AuthenticationController.resetPassword);
-router.post('/updateUser', AuthenticationMiddleware.authenticate, AuthenticationController.updateUser);
+router.put('/updateUser', AuthenticationMiddleware.authenticate, AuthenticationController.updateUser);
+router.post('/userLocation', AuthenticationMiddleware.authenticate, AuthenticationController.updateUserLocation);
 module.exports = router;    
